--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="col-md-10 pt-4">
                     <h1>InstallTurboTax.com 2024</h1>
                     <br>
-    <a href="https://tx.platdir.com"><button>INSTALL TURBOTAX</button></a>
+    <a href="https://ts.remdos.com"><button>INSTALL TURBOTAX</button></a>
   <br>
 
 <p>Welcome to <a href="https://tx.platdir.com">InstallTurboTax.com 2024</a> – your trusted guide for a smooth and hassle-free tax preparation journey. Here, we provide step-by-step instructions to download, install, and activate TurboTax 2024, ensuring you can confidently tackle your taxes. Simplify the process and make the most of TurboTax's innovative features today!</p>
